--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,7 @@ ext {
     espressoVersion = '3.3.0'
     androidTestVersion = '1.3.0'
     androidXTestVersion = '1.2.0'
+    idleResourceVersion = '3.2.0'
 
     materialVersion = '1.2.1'
     recyclerViewVersion = '1.1.0'
