--- a/gradle.properties
+++ b/gradle.properties
@@ -19,3 +19,8 @@ android.useAndroidX=true
 android.enableJetifier=true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
+#API KEY
+
+TMDBApiKey = "ab54f18236e63dc6daf7c9aa35047444"
+BaseUrl = "https://api.themoviedb.org/"
+BaseImageUrl = "https://image.tmdb.org/t/p/w300/"
