--- a/build.gradle
+++ b/build.gradle
@@ -42,4 +42,6 @@ ext {
     androidCoreTestVersion = '2.1.0'
     mockitoVersion = '3.6.0'
     mockitoKotlinVersion = '2.2.0'
+    roomVersion = '2.2.3'
+    roomRuntimeVersion = '2.2.5'
 }
