--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,6 +61,7 @@ dependencies {
     implementation "com.squareup.okhttp3:logging-interceptor:4.9.0"
     implementation "androidx.test.espresso:espresso-idling-resource:$idleResourceVersion"
     implementation "androidx.room:room-runtime:$roomRuntimeVersion"
+    implementation 'androidx.paging:paging-runtime-ktx:3.0.0'
     kapt "androidx.room:room-compiler:$roomVersion"
 
     //testing
